--- a/client/templates/application/layout.html
+++ b/client/templates/application/layout.html
@@ -1,10 +1,6 @@
 <template name="layout">
   <div class="container">
-      <header class="navbar navbar-default" role="navigation">
-        <div class="navbar-header">
-          <a href="{{pathFor 'postsList'}}" class="navbar-brand">Microscope</a>
-        </div>
-      </header>
+      {{> header}}
       <div id="main" class="row-fluid">
         {{> yield}}
       </div>
