--- a/client/templates/includes/header.html
+++ b/client/templates/includes/header.html
@@ -11,6 +11,9 @@
         <a class="navbar-brand" href="{{pathFor 'postsList'}}">Microscope</a>
       </div>
       <div class="collapse navbar-collapse" id="navigation">
+        <ul class="nav navbar-nav">
+          {{#if currentUser}}<li><a href="{{pathFor 'postSubmit'}}">Submit Post</a></li>{{/if}}
+        </ul>
         <ul class="nav navbar-nav navbar-right">
           {{> loginButtons}}
         </ul>
