--- a/client/templates/posts/post_edit.html
+++ b/client/templates/posts/post_edit.html
@@ -1,18 +1,20 @@
 <template name="postEdit">
   <form class="main form">
-    <div class="form-group">
+    <div class="form-group {{errorClass 'url'}}">
       <label for="url" class="control-label">URL</label>
       <div class="controls">
         <input type="text" name="url" id="url" value="{{url}}" placeholder="Your URL" class="form-control">
+        <span class="help-block">{{errorMessage 'url'}}</span>
       </div>
     </div>
-    <div class="form-group">
+    <div class="form-group {{errorClass 'title'}}">
       <label for="title" class="control-label">Title</label>
       <div class="controls">
         <input type="text" name="title" id="title" value="{{title}}" placeholder="Name your post" class="form-control">
       </div>
     </div>
     <input type="submit" value="Submit" class="btn btn-primary submit">
+    <span class="help-block">{{errorMessage 'title'}}</span>
     <hr>
     <a href="#" class="btn btn-danger delete">Delete post</a>
   </form>
