--- a/client/templates/posts/post_submit.html
+++ b/client/templates/posts/post_submit.html
@@ -1,15 +1,17 @@
 <template name="postSubmit">
   <form class="main form">
-    <div class="form-group">
+    <div class="form-group {{errorClass 'url'}}">
       <label for="url" class="control-label">URL</label>
       <div class="controls">
         <input type="text" name="url" id="url" value="" placeholder="Your URL" class="form-control"/>
+        <span class="help-block">{{errorMessage 'url'}}</span>
       </div>
     </div>
-    <div class="form-group">
+    <div class="form-group {{errorClass 'title'}}">
       <label for="title" class="control-label">Title</label>
       <div class="controls">
         <input type="text" name="title" id="title" value="" placeholder="Name yout post" class="form-control">
+        <span class="help-block">{{errorMessage 'title'}}</span>
       </div>
     </div>
     <input type="submit" value="Submit" class="btn btn-primary"/>
