--- a/client/templates/posts/posts_list.html
+++ b/client/templates/posts/posts_list.html
@@ -3,5 +3,9 @@
     {{#each posts}}
       {{> postItem}}
     {{/each}}
+
+    {{#if nextPath}}
+      <a href="{{nextPath}}" class="load-more">Load more</a>
+    {{/if}}
   </div>
 </template>
