Add a spinner for load more

--- a/client/templates/posts/posts_list.html
+++ b/client/templates/posts/posts_list.html
@@ -6,6 +6,10 @@
 
     {{#if nextPath}}
       <a href="{{nextPath}}" class="load-more">Load more</a>
+    {{else}}
+      {{#unless ready}}
+        {{> spinner}}
+      {{/unless}}
     {{/if}}
   </div>
 </template>
