--- a/client/templates/posts/post_item.html
+++ b/client/templates/posts/post_item.html
@@ -4,9 +4,9 @@
     <div class="post-content">
       <h3><a href="{{url}}">{{title}}</a><span>{{domain}}</span></h3>
       <p>
-        {{votew}} Votes,
+        {{pluralize votes "Vote"}},
         submited by {{author}},
-        <a href="{{pathFor 'postPage'}}">{{commentsCount}} comments</a>
+        <a href="{{pathFor 'postPage'}}">{{pluralize commentsCount "comment"}}</a>
         {{#if ownPost}}<a href="{{pathFor 'postEdit'}}">Edit</a>{{/if}}
       </p>
     </div>
