--- a/client/templates/posts/posts_list.html
+++ b/client/templates/posts/posts_list.html
@@ -1,8 +1,10 @@
 <template name="postsList">
-  <div class="posts">
-    {{#each posts}}
-      {{> postItem}}
-    {{/each}}
+  <div class="posts page">
+    <div class="wrapper">
+      {{#each posts}}
+        {{> postItem}}
+      {{/each}}
+    </div>
 
     {{#if nextPath}}
       <a href="{{nextPath}}" class="load-more">Load more</a>
